# test

./: README.md
.qwen/: PROJECT_SUMMARY.md
hidra/: .gitignore  CHANGELOG.md  LICENSE  README.md  SOLUTIONS.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  test_minimal_config.py  test_new_features.py  validate_changes.py  validate_changes_simple.py
hidra/examples/: README.md  advanced_example.py  diagnostic_example.py  fastapi_example.py  minimal_example.py  optimal_usage_example.py  problem_solution_example.py  schema_manager_example.py  simple_example.py
hidra/hidra/: __init__.py  auto_tenant_loader.py  core.py  database.py  db_simple.py  decorators.py  diagnostic.py  exceptions.py  fastapi_auto_config.py  helpers.py  integrations.py  middleware.py  migrations.py  models.py  quick_start.py  schema_manager.py
hidra/hidra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hidra/multitenancy/: __init__.py  core.py  database.py  decorators.py  error_handler.py  exceptions.py  middleware.py  models.py
hidra/tests/: test_core.py  test_database.py  test_middleware.py  test_migrations.py  test_schema_manager.py
mi_api/: .gitignore  README.md  main.py  main_test.py  requirements.txt  tenant_acme-corp.db  tenant_startup-tech.db  test_new_features.py  test_users.ps1
