[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidra"
version = "0.1.0"
description = "A lightweight multitenancy library for Python APIs"
authors = [
    { name = "Hamilton Patiño Solano", email = "hamiltonpatinosolano@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["multitenancy", "fastapi", "sqlalchemy", "tenancy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "sqlalchemy>=1.4.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.68.0",
    "starlette>=0.14.0",
]
flask = [
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.0",
    "isort>=5.0",
]